<resources>
    <string name="app_name">Коды Регионов Авто России (Pro версия)</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Почта техподдержки</string>
    <string name="nav_header_subtitle">simple.help.me@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_basic">Главная</string>
    <string name="menu_civil">Гражданские</string>
    <string name="menu_police">Полицейские</string>
    <string name="menu_army">Военные</string>
    <string name="menu_dip">Дипломатические</string>
    <string name="menu_like">Нравится</string>
    <string name="butt_civil">Гражданские номера</string>
    <string name="butt_police">Полицейские номера</string>
    <string name="butt_army">Военные номера</string>
    <string name="butt_dip">Дипломатические номера</string>
    <string name="adygeya">Республика Адыгея</string>
    <string name="bash">Республика Башкортостан</string>
    <string name="bur">Республика Бурятия</string>
    <string name="altay">Республика Алтай</string>
    <string name="dages">Республика Дагестан</string>
    <string name="ingush">Республика Ингушетия</string>
    <string name="kabard">Кабардино-Балкарская Республика</string>
    <string name="kalm">Республика Калмыкия</string>
    <string name="karach">Республика Карачаево-Черкесия</string>
    <string name="karel">Республика Карелия</string>
    <string name="komi">Республика Коми</string>
    <string name="mariy">Республика Марий Эл</string>
    <string name="mordov">Республика Мордовия</string>
    <string name="saha">Республика Саха (Якутия)</string>
    <string name="sevoset">Республика Северная Осетия — Алания</string>
    <string name="tatars">Республика Татарстан</string>
    <string name="tyva">Республика Тыва</string>
    <string name="udmur">Удмуртская Республика</string>
    <string name="hakas">Республика Хакасия</string>
    <string name="chuva">Чувашская Республика</string>
    <string name="altkray">Алтайский край</string>
    <string name="krdar">Краснодарский край</string>
    <string name="kryar">Красноярский край</string>
    <string name="prim">Приморский край</string>
    <string name="stavr">Ставропольский край</string>
    <string name="habar">Хабаровский край</string>
    <string name="amur">Амурская область</string>
    <string name="arhan">Архангельская область</string>
    <string name="astrah">Астраханская область</string>
    <string name="belgor">Белгородская область</string>
    <string name="bryan">Брянская область</string>
    <string name="vladim">Владимирская область</string>
    <string name="volgog">Волгоградская область</string>
    <string name="vologod">Вологодская область</string>
    <string name="voron">Воронежская область</string>
    <string name="ivan">Ивановская область</string>
    <string name="irkut">Иркутская область</string>
    <string name="kalin">Калининградская область</string>
    <string name="kaluzh">Калужская область</string>
    <string name="kamcha">Камчатский край</string>
    <string name="kemer">Кемеровская область</string>
    <string name="kirov">Кировская область</string>
    <string name="kostrom">Костромская область</string>
    <string name="kurgan">Курганская область</string>
    <string name="kurs">Курская область</string>
    <string name="lenin">Ленинградская область</string>
    <string name="lipec">Липецкая область</string>
    <string name="magadan">Магаданская область</string>
    <string name="mos">Московская область</string>
    <string name="murman">Мурманская область</string>
    <string name="nizhe">Нижегородская область</string>
    <string name="novgor">Новгородская область</string>
    <string name="novosib">Новосибирская область</string>
    <string name="omsk">Омская область</string>
    <string name="orenburg">Оренбургская область</string>
    <string name="orl">Орловская область</string>
    <string name="penz">Пензенская область</string>
    <string name="perm">Пермский край</string>
    <string name="pskov">Псковская область</string>
    <string name="rost">Ростовская область</string>
    <string name="ryaz">Рязанская область</string>
    <string name="samar">Самарская область</string>
    <string name="sarat">Саратовская область</string>
    <string name="sahal">Сахалинская область</string>
    <string name="sverd">Свердловская область</string>
    <string name="smol">Смоленская область</string>
    <string name="tamb">Тамбовская область</string>
    <string name="tvers">Тверская область</string>
    <string name="tomsk">Томская область</string>
    <string name="tul">Тульская область</string>
    <string name="tym">Тюменская область</string>
    <string name="ulyan">Ульяновская область</string>
    <string name="chel">Челябинская область</string>
    <string name="zabay">Забайкальский край</string>
    <string name="yaros">Ярославская область</string>
    <string name="moscow">Москва</string>
    <string name="piter">Санкт-Петербург</string>
    <string name="evreys">Еврейская автономная область</string>
    <string name="krym">Республика Крым</string>
    <string name="nenec">Ненецкий автономный округ</string>
    <string name="hant">Ханты-Мансийский автономный округ Югра</string>
    <string name="chyk">Чукотский автономный округ</string>
    <string name="yamal">Ямало-Ненецкий автономный округ</string>
    <string name="sevast">Севастополь</string>
    <string name="baykonur">Байконур</string>
    <string name="chechen">Чеченская республика</string>
    <string name="british">Великобритания</string>
    <string name="german">Германия</string>
    <string name="kanada">Канада</string>
    <string name="usa">США</string>
    <string name="japan">Япония</string>
    <string name="ispan">Испания</string>
    <string name="franc">Франция</string>
    <string name="belgium">Бельгия</string>
    <string name="grec">Греция</string>
    <string name="dania">Дания</string>
    <string name="italia">Италия</string>
    <string name="lyuksemburg">Люксембург</string>
    <string name="niderland">Нидерланды</string>
    <string name="norveg">Норвегия</string>
    <string name="turc">Турция</string>
    <string name="avstral">Австралия</string>
    <string name="austria">Австрия</string>
    <string name="alzhir">Алжир</string>
    <string name="egipet">Египет</string>
    <string name="ruanda">Руанда</string>
    <string name="argent">Аргентина</string>
    <string name="afgan">Афганистан</string>
    <string name="myanma">Мьянма</string>
    <string name="bolivia">Боливия</string>
    <string name="brazil">Бразилия</string>
    <string name="burundi">Бурунди</string>
    <string name="gana">Гана</string>
    <string name="bangladash">Бангладеш</string>
    <string name="gvinea">Гвинея</string>
    <string name="zambia">Замбия</string>
    <string name="peru">Перу</string>
    <string name="india">Индия</string>
    <string name="indonez">Индонезия</string>
    <string name="iordan">Иордания</string>
    <string name="irak">Ирак</string>
    <string name="iran">Иран</string>
    <string name="irland">Ирландия</string>
    <string name="island">Исландия</string>
    <string name="kambodzh">Камбоджа</string>
    <string name="kenia">Кения</string>
    <string name="kipr">Кипр</string>
    <string name="kongo">Республика Конго</string>
    <string name="kostarika">Коста-Рика</string>
    <string name="kuveyt">Кувейт</string>
    <string name="laos">Лаос</string>
    <string name="livan">Ливан</string>
    <string name="livia">Ливия</string>
    <string name="mali">Мали</string>
    <string name="marokko">Марокко</string>
    <string name="meksika">Мексика</string>
    <string name="nepal">Непал</string>
    <string name="nigeria">Нигерия</string>
    <string name="venes">Венесуэла</string>
    <string name="newzeland">Новая Зеландия</string>
    <string name="pakistan">Пакистан</string>
    <string name="burkinafaso">Буркина-Фасо</string>
    <string name="senegal">Сенегал</string>
    <string name="somali">Сомали</string>
    <string name="sudan">Судан</string>
    <string name="serraleone">Сьерра-Леоне</string>
    <string name="tailand">Таиланд</string>
    <string name="tanzania">Танзания</string>
    <string name="tunis">Тунис</string>
    <string name="uganda">Уганда</string>
    <string name="urugvai">Уругвай</string>
    <string name="filip">Филиппины</string>
    <string name="finland">Финляндия</string>
    <string name="shrilanka">Шри-Ланка</string>
    <string name="chad">Чад</string>
    <string name="shveicar">Швейцария</string>
    <string name="shvecia">Швеция</string>
    <string name="ekvador">Эквадор</string>
    <string name="efiopia">Эфиопия</string>
    <string name="angola">Ангола</string>
    <string name="demokratrepublickongo">Демократическая Республика Конго</string>
    <string name="kolumbia">Колумбия</string>
    <string name="kamerun">Камерун</string>
    <string name="gvineabisua">Гвинея-Бисау</string>
    <string name="portugal">Португалия</string>
    <string name="bolgaria">Болгария</string>
    <string name="vengria">Венгрия</string>
    <string name="polsha">Польша</string>
    <string name="kndr">КНДР</string>
    <string name="kuba">Куба</string>
    <string name="mongolia">Монголия</string>
    <string name="kitay">Китай</string>
    <string name="rumyn">Румыния</string>
    <string name="serbia">Сербия</string>
    <string name="benin">Бенин</string>
    <string name="gabon">Габон</string>
    <string name="mavritania">Мавритания</string>
    <string name="madagas">Мадагаскар</string>
    <string name="malayzia">Малайзия</string>
    <string name="singapur">Сингапур</string>
    <string name="centrafrepubl">Центральноафриканская Республика</string>
    <string name="yemen">Йемен</string>
    <string name="palestina">Государство Палестина</string>
    <string name="nikaragua">Никарагуа</string>
    <string name="mozambik">Мозамбик</string>
    <string name="ekvatorgvinea">Экваториальная Гвинея</string>
    <string name="maltorden">Мальтийский орден</string>
    <string name="malta">Мальта</string>
    <string name="zimbabve">Зимбабве</string>
    <string name="oae">ОАЭ</string>
    <string name="kotdivuar">Кот-д’Ивуар</string>
    <string name="namibia">Намибия</string>
    <string name="oman">Оман</string>
    <string name="katar">Катар</string>
    <string name="korea">Республика Корея</string>
    <string name="chili">Чили</string>
    <string name="panama">Панама</string>
    <string name="izrail">Израиль</string>
    <string name="severmakedon">Северная Македония</string>
    <string name="alban">Албания</string>
    <string name="vatikan">Ватикан</string>
    <string name="litva">Литва</string>
    <string name="siria">Сирия</string>
    <string name="estonia">Эстония</string>
    <string name="latvia">Латвия</string>
    <string name="bahreyn">Бахрейн</string>
    <string name="yuar">Южно-Африканская Республика</string>
    <string name="armen">Армения</string>
    <string name="saudarav">Саудовская Аравия</string>
    <string name="sloven">Словения</string>
    <string name="uzbekist">Узбекистан</string>
    <string name="kirgis">Киргизия</string>
    <string name="horvat">Хорватия</string>
    <string name="azerbay">Азербайджан</string>
    <string name="ukrain">Украина</string>
    <string name="moldavi">Молдавия</string>
    <string name="chehia">Чехия</string>
    <string name="slovak">Словакия</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="choose_tip_nomerov">Выберите тип номеров</string>
</resources>