<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.basic.BasicFragment"
    android:background="@color/originalGray">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/button_civil"
            android:gravity="center"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:text="@string/choose_tip_nomerov"
            android:textColor="@color/closeWhite"
            android:textSize="25sp">
        </TextView>
    <Button
        android:id="@+id/button_civil"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_above="@id/button_police"
        style="@style/RoundedCornerButtonDay"
        android:drawableEnd="@drawable/ic_baseline_civil_24"
        android:textColor="@color/darkGray"
        android:drawablePadding="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="20sp"
        android:text="@string/butt_civil"
        />

    <Button
        android:id="@+id/button_police"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_above="@id/button_army"
        style="@style/RoundedCornerButtonDay"
        android:drawableEnd="@drawable/ic_baseline_police_24"
        android:textColor="@color/darkGray"
        android:drawablePadding="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="20sp"
        android:text="@string/butt_police"
        />

    <Button
        android:id="@+id/button_army"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_above="@id/button_dip"
        style="@style/RoundedCornerButtonDay"
        android:drawableEnd="@drawable/ic_baseline_army_24"
        android:textColor="@color/darkGray"
        android:drawablePadding="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="20sp"
        android:text="@string/butt_army"
        />

    <Button
        android:id="@+id/button_dip"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        style="@style/RoundedCornerButtonDay"
        android:drawableEnd="@drawable/ic_baseline_dip_24"
        android:textColor="@color/darkGray"
        android:drawablePadding="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="20sp"
        android:text="@string/butt_dip"
        />

</RelativeLayout>